# interviews

./: .devcontainer.json  .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES  devcontainer.json  docker-compose.yml  init.sh  topLevelVerify.sh
.devcontainer/: devcontainer.json
.devcontainer/aws-terraform/: devcontainer.json
.devcontainer/c-sharp/: devcontainer.json
.devcontainer/cpp/: devcontainer.json
.devcontainer/f-sharp/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/java/: devcontainer.json
.devcontainer/java-spring-boot/: devcontainer.json
.devcontainer/java21/: devcontainer.json
.devcontainer/javascript/: devcontainer.json
.devcontainer/jupyter-notebook/: devcontainer.json
.devcontainer/mono/: devcontainer.json
.devcontainer/python/: devcontainer.json
.devcontainer/rust/: devcontainer.json
.devcontainer/typescript/: devcontainer.json
.devcontainer/typescript-react/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: verify.yml
aws-terraform/: .terraform.lock.hcl  Makefile  README.md  main.tf
c-sharp/: CSharp.slnx  Makefile  README.md  csharp.sln
c-sharp/.devcontainer/: Dockerfile  devcontainer.json
c-sharp/Application/: Example.cs  Greeting.cs  Program.cs
c-sharp/Check/: Generator.cs  Program.cs
c-sharp/Check.Tests/: Check.Tests.csproj  GeneratorTests.cs
c-sharp/UnitTests/: ExampleTests.cs  GreetingTests.cs  UnitTests.csproj
cpp/: CMakeLists.txt  Makefile  README.md  main.cpp  main_test.cpp
docs/: interview-environment.md
f-sharp/: FSharp.slnx  Makefile  README.md
f-sharp/Application/: Application.fsproj  Greeting.fs  Program.fs
f-sharp/UnitTests/: Tests.fs  UnitTests.fsproj
go/: Makefile  README.md  go.mod  main.go  main_test.go  npm-client.go
java/: .sdkmanrc  Makefile  README.md  build.gradle  pom.xml  setup-java.sh
java-spring-boot/: .sdkmanrc  Makefile  README.md  build.gradle
java-spring-boot/src/main/resources/: application.yaml
java/src/com/kylehoehns/example/: Main.java
java/src/main/java/com/kylehoehns/example/: Util.java
java/src/main/resources/: application.yaml
java21-gradle/: Makefile  README.md
javascript/: Makefile  README.md  package-lock.json  package.json
javascript/src/: index.js  index.spec.js
jupyter-notebook/: Makefile  README.md  data.csv  main.ipynb  pyproject.toml  requirements.txt
python/: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
python/app/: main.py
python/npm_client/: client.py  main.py
python/py_check/: main.py
python/tests/: test_main.py
resources/: init.sh  languageSelect.py  topLevelVerify.sh
rust/: Makefile
rust/src/: main.rs
superapp/: Dockerfile  app.js  package-lock.json  package.json
terraform/: README.md  docker_login.sh  ecr.tf  eks.tf  fargate.tf  setup.sh  terraform.tfstate  terraform.tfstate.backup
typescript/: .eslintrc.js  .gitignore  .npmrc  README.md  jest.config.cjs  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript-react/: Makefile  README.md  package-lock.json  package.json  vite.config.ts
typescript-react/src/: App.jsx  App.spec.jsx  App.spec.tsx
typescript/.github/: dependabot.yml
typescript/src/: index.spec.ts  index.ts  npm-client.ts
(+14 files in other folders)
