[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Source Allies"]

[tool.poetry.dependencies]
jupyter-core = "5.7.2"
matplotlib = "3.8.3"
numpy = "1.26.4"
pandas = "2.2.1"
python =  "^3.10.8"

[tool.poetry.dev-dependencies]
ipython = "8.22.2"
ipykernel = "6.29.3"
nbconvert = "7.16.3"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"