[tool.poetry]
name = "jupyter_notebook"
version = "0.0.1"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.8"
jupyter = "^1.0.0"
jupyter_core = "^5.7.2"
nbconvert = "^7.16.4"
pandas = "^2.1.1"  
numpy = "^1.25.2"  
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
