[tool.poetry]
name = "jupyter_notebook"
version = "0.0.1"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.8"
jupyter = "^1.0.0"
jupyter_core = "^5.9.1"
nbconvert = "^7.17.0"
pandas = "^2.3.0"  
numpy = "^2.2.6"  
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
