[tool.poetry]
name = "py_check"
version = "0.1.0"
description = ""
authors = ["Jake Williamson"]

[tool.poetry.dependencies]
python = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
coverage = "7.11.3"
mypy = "1.18.2"
black = "25.11.0"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"