[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jake Williamson"]

[tool.poetry.dependencies]
python = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pylint = "4.0.2"
coverage = "7.12.0"
mypy = "1.19.0"
black = "25.11.0"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"