[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jake Williamson"]

[tool.poetry.dependencies]
python = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
pylint = "4.0.2"
coverage = "7.13.4"
mypy = "1.19.0"
black = "26.1.0"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"